# Dorimeji

./: CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/creature/: creature.hpp
src/shader/: shader.hpp
